platform/gitea/templates/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: gitea-ssh
  namespace: gitea
spec:
  parentRefs:
  - name: public-gateway
    namespace: kube-system
    sectionName: ssh
  rules:
  - backendRefs:
    - name: gitea-ssh
      port: 22
